--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm-check-updates",
+  "name": "@gerhobbelt/npm-check-updates",
   "version": "2.13.0",
   "author": "Tomas Junnonen <tomas1@gmail.com>",
   "license": "Apache-2.0",
@@ -30,7 +30,8 @@
   "scripts": {
     "lint": "eslint bin lib test",
     "watch": "chokidar \"lib/**/*.js\" -c \"npm run test\"",
-    "test": "npm run lint ; mocha && mocha test/individual"
+    "test": "npm run lint ; mocha && mocha test/individual",
+    "pub": "npm publish --access public"
   },
   "bin": {
     "npm-check-updates": "./bin/npm-check-updates",
@@ -71,7 +72,7 @@
     "eslint": "4.11.0",
     "mocha": "4.0.1",
     "should": "13.1.3",
-    "tmp": "0.0.31"
+    "tmp": "0.0.33"
   },
   "files": [
     "bin",
