--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "lint": "eslint bin lib test",
     "watch": "chokidar \"lib/**/*.js\" -c \"npm run test\"",
-    "test": "npm run lint ; mocha && mocha test/individual",
+    "test": "npm run lint && mocha test/individual && mocha",
     "pub": "npm publish --access public"
   },
   "bin": {
