--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gerhobbelt/npm-check-updates",
-  "version": "2.13.0",
+  "version": "2.13.1-1",
   "author": "Tomas Junnonen <tomas1@gmail.com>",
   "license": "Apache-2.0",
   "contributors": [
